--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-modal": "^3.11.2",
+    "react-reactions": "github:randomdipesh/react-reactions",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "react-select": "^3.0.8",
+    "react-tabs": "^3.1.0",
     "react-toastify": "^5.5.0",
+    "react-tooltip": "^4.2.1",
     "redux": "^4.0.5",
     "redux-form": "^8.3.1",
     "redux-thunk": "^2.3.0"
