--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "moment": "^2.24.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-infinite-scroller": "^1.2.4",
     "react-modal": "^3.11.2",
     "react-reactions": "github:randomdipesh/react-reactions",
     "react-redux": "^7.1.3",
