--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.1",
+    "emoji-mart": "^3.0.0",
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "react": "^16.12.0",
+    "react-contextmenu": "^2.13.0",
     "react-dom": "^16.12.0",
     "react-infinite-scroller": "^1.2.4",
     "react-modal": "^3.11.2",
