--- a/package.json
+++ b/package.json
@@ -1,33 +1,34 @@
 {
   "name": "blogger",
-  "version": "0.1.0",
+  "version": "3.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.4.0",
+    "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "axios": "^0.19.1",
+    "axios": "^0.19.2",
     "emoji-mart": "^3.0.0",
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
-    "moment": "^2.24.0",
-    "react": "^16.12.0",
+    "moment": "^2.25.2",
+    "react": "^16.13.1",
     "react-contextmenu": "^2.13.0",
-    "react-dom": "^16.12.0",
+    "react-dom": "^16.13.1",
     "react-infinite-scroller": "^1.2.4",
     "react-modal": "^3.11.2",
     "react-reactions": "github:randomdipesh/react-reactions",
-    "react-redux": "^7.1.3",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
-    "react-select": "^3.0.8",
+    "react-select": "^3.1.0",
     "react-tabs": "^3.1.0",
     "react-toastify": "^5.5.0",
-    "react-tooltip": "^4.2.1",
+    "react-tooltip": "^4.2.5",
     "redux": "^4.0.5",
-    "redux-form": "^8.3.1",
-    "redux-thunk": "^2.3.0"
+    "redux-form": "^8.3.5",
+    "redux-thunk": "^2.3.0",
+    "socket.io-client": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
