--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lodash": "^4.17.15",
     "moment": "^2.25.2",
     "react": "^16.13.1",
+    "react-avatar-editor": "11.0.9",
     "react-contextmenu": "^2.13.0",
     "react-dom": "^16.13.1",
     "react-infinite-scroller": "^1.2.4",
